--- a/pom.xml
+++ b/pom.xml
@@ -93,8 +93,9 @@
           <artifactId>maven-compiler-plugin</artifactId>
           <version>2.5.1</version>
           <configuration>
-            <source>1.6</source>
-            <target>1.6</target>
+            <source>1.7</source>
+            <target>1.7</target>
+            <encoding>${project.build.sourceEncoding}</encoding>
           </configuration>
         </plugin>
         <plugin>
@@ -107,7 +108,7 @@
                 <version>[3.0.2,)</version>
               </requireMavenVersion>
               <requireJavaVersion>
-                <version>1.6</version>
+                <version>1.7</version>
               </requireJavaVersion>
             </rules>
           </configuration>
@@ -259,8 +260,9 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
-          <source>1.6</source>
-          <target>1.6</target>
+          <source>1.7</source>
+          <target>1.7</target>
+          <encoding>${project.build.sourceEncoding}</encoding>
         </configuration>
       </plugin>
       <plugin>
@@ -299,9 +301,6 @@
             <goals>
               <goal>attach-descriptor</goal>
             </goals>
-            <configuration>
-              <generateReports>true</generateReports>
-            </configuration>
           </execution>
         </executions>
       </plugin>
