--- a/rpc/pom.xml
+++ b/rpc/pom.xml
@@ -74,6 +74,9 @@
                 <argument>src/main/proto/ProtoParamRpcProtocol.proto</argument>
                 <argument>src/main/proto/DummyProtos.proto</argument>
                 <argument>src/main/proto/PrimitiveProtos.proto</argument>
+                <argument>src/main/proto/RpcProtos.proto</argument>
+                <argument>src/main/proto/TestProtos.proto</argument>
+                <argument>src/main/proto/TestProtocol.proto</argument>
               </arguments>
             </configuration>
             <goals>
